--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,8 @@
     "angular-loader": "~1.4.0",
     "angular-mocks": "~1.4.0",
     "html5-boilerplate": "~5.2.0",
-    "jquery": "~2.1.4"
+    "jquery": "~2.1.4",
+    "moment": "~2.10.6",
+    "sweetalert": "~1.1.3"
   }
 }
